Working event-input and broadcast

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,9 +1,19 @@
-spring.cloud.stream.bindings.input.destination=event-handler-input
-spring.cloud.stream.bindings.input.content-type=application/json
-spring.cloud.stream.bindings.input.group=eventHandlerInputGroup
-spring.cloud.stream.rabbit.bindings.input.consumer.acknowledge-mode=MANUAL
+#spring.cloud.stream.bindings.input.destination=event-handler-input
+#spring.cloud.stream.bindings.input.content-type=application/json
+#spring.cloud.stream.bindings.input.group=eventHandlerInputGroup
+#spring.cloud.stream.rabbit.bindings.input.consumer.acknowledge-mode=MANUAL
+
+spring.cloud.stream.bindings.event-input.destination=event-handler-input
+spring.cloud.stream.bindings.event-input.content-type=application/json
+spring.cloud.stream.bindings.event-input.group=eventHandlerInputGroup
+spring.cloud.stream.rabbit.bindings.event-input.consumer.acknowledge-mode=MANUAL
+
+spring.cloud.stream.bindings.broadcasts.destination=broadcasts
+spring.cloud.stream.bindings.broadcasts.content-type=application/json
+#spring.cloud.stream.bindings.broadcasts.group=eventHandlerInputGroup
+spring.cloud.stream.rabbit.bindings.broadcasts.consumer.acknowledge-mode=MANUAL
 
 #spring.cloud.stream.bindings.output.destination=event-handler-input
-spring.cloud.stream.bindings.output.contentType=application/json
+#spring.cloud.stream.bindings.output.contentType=application/json
 
 
